fix hero alignment v2

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-color: #1f2937;
     display: flex;
     justify-content: center;
-    padding: 0px 80px;
+    padding: 100px 80px;
 }
 
 .primary-section {
@@ -54,13 +54,10 @@ p {
 .hero {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 40px;
-    padding: 100px 80px;
+    width: 1000px;
 }
-
-    .hero .content {
-        flex: 1;
-    }
     
     .hero h1 {
         color: white;
